# FenicuTriggerBot

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.rabbit  LICENSE  Makefile  README.md  compose.yml  docker-compose.yml  fluentogram.pyi  logging.yaml  pyproject.toml  ТЗ.md
.gitlab/ci/scripts/: deploy.sh  generate-env.sh
.gitlab/ci/templates/: .build.yml  .deploy.yml  .security.yml  .test.yml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: captcha.py  chats.py  media.py  stats.py  system.py  triggers.py  users.py
app/bot/: dispatcher.py  instance.py
app/bot/callback_data/: admin.py  moderation.py  triggers.py
app/bot/filters/: moderation.py
app/bot/handlers/: __init__.py  admin.py  anime.py  captcha.py  chat_member.py  chat_moderation.py  common.py  creation.py  management.py  matching.py  moderation.py  src.py  status.py  trust.py  variables.py  welcome.py
app/bot/keyboards/: admin.py  moderation.py  triggers.py
app/bot/middlewares/: banned.py  chat.py  database.py  gban.py  i18n.py  ignore.py  stats.py  trust.py  user.py  user_chat.py
app/core/: broker.py  config.py  database.py  i18n.py  logging.py  storage.py  tasks.py  time_util.py  valkey.py
app/db/: README.md
app/db/migrations/: env.py
app/db/migrations/versions/: 00b36600ebfd_add_chat_moderation_and_warns.py  21738c83d241_add_moderation.py  52235a2ed1d1_add_trust_system.py  (+20 more)
app/db/models/: __init__.py  base.py  captcha_session.py  chat.py  chat_variable.py  daily_stat.py  moderation_history.py  trigger.py  trust_history.py  user.py  user_chat.py  warn.py
app/schemas/: admin.py  moderation.py  stats.py  trigger.py
app/services/: anime_service.py  captcha_service.py  chat_service.py  chat_variable_service.py  gban_service.py  moderation_history_service.py  moderation_service.py  template_service.py  trigger_service.py  user_service.py  welcome_service.py
app/worker/: captcha.py  image.py  llm.py  main.py  message.py  service.py  telegram.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Breadcrumbs.tsx  ChatAvatar.tsx  ConfirmModal.tsx  ErrorBoundary.tsx  Layout.tsx  LazyVideo.tsx  MediaModal.tsx  ModerationTimeline.tsx  Skeleton.tsx  StatusBadge.tsx  StickerPreview.tsx  Toast.tsx  TriggerFilters.tsx  TriggerImage.tsx  TriggersList.tsx  UserAvatar.tsx
frontend/src/pages/: Captcha.tsx  ChatDetails.tsx  ChatTriggers.tsx  Chats.tsx  Home.tsx  Login.tsx  Triggers.tsx  UserDetails.tsx  Users.tsx
frontend/src/store/: store.ts
frontend/src/types/: index.ts
locales/en/: messages.ftl
locales/ru/: messages.ftl
